--- a/src/main/resources/template/Dao.java.vm
+++ b/src/main/resources/template/Dao.java.vm
@@ -1,7 +1,7 @@
 package ${package}.dao;
 
 import ${package}.entity.${className}Entity;
-import ${package}.mybatis.dao.BaseDao;
+import ${main}.mybatis.dao.BaseDao;
 import org.apache.ibatis.annotations.Mapper;
 
 /**
