--- a/src/main/resources/template/Entity.java.vm
+++ b/src/main/resources/template/Entity.java.vm
@@ -1,7 +1,7 @@
 package ${package}.entity;
 
 import com.baomidou.mybatisplus.annotation.TableName;
-import ${package}.mybatis.entity.BaseEntity;
+import ${main}.mybatis.entity.BaseEntity;
 
 import lombok.Data;
 import lombok.experimental.Accessors;
@@ -10,6 +10,7 @@ import lombok.EqualsAndHashCode;
 #if(${hasBigDecimal})
 import java.math.BigDecimal;
 #end
+import java.util.Date;
 
 /**
  * ${comments}
