--- a/src/main/resources/template/Service.java.vm
+++ b/src/main/resources/template/Service.java.vm
@@ -1,7 +1,6 @@
 package ${package}.service;
 
-import ${package}.mybatis.page.PageData;
-import ${package}.mybatis.service.BaseService;
+import ${main}.mybatis.service.BaseService;
 import ${package}.dto.${className}DTO;
 import ${package}.entity.${className}Entity;
 
@@ -16,15 +15,4 @@ import java.util.Map;
  */
 public interface ${className}Service extends BaseService<${className}Entity> {
 
-    PageData<${className}DTO> page(Map<String, Object> params);
-
-    List<${className}DTO> list(Map<String, Object> params);
-
-    ${className}DTO get(String id);
-
-    void save(${className}DTO dto);
-
-    void update(${className}DTO dto);
-
-    void delete(String[] ids);
 }
