feat: 适应新模版

--- a/src/main/resources/template/Controller.java.vm
+++ b/src/main/resources/template/Controller.java.vm
@@ -70,7 +70,7 @@ public class ${className}Controller {
         ${className}Entity entity = ConvertUtils.sourceToTarget(dto,${className}Entity.class);
         ${classname}Service.save(entity);
 
-        return R.ok("");
+        return R.ok();
     }
 
     @PutMapping
@@ -80,7 +80,7 @@ public class ${className}Controller {
         ${className}Entity entity = ConvertUtils.sourceToTarget(dto,${className}Entity.class);
         ${classname}Service.updateById(entity);
 
-        return R.ok("");
+        return R.ok();
     }
 
     @DeleteMapping
@@ -89,7 +89,7 @@ public class ${className}Controller {
 
         ${classname}Service.removeByIds(Arrays.asList(ids));
 
-        return R.ok("");
+        return R.ok();
     }
 
     @GetMapping("export")
