--- a/src/main/resources/template/Entity.java.vm
+++ b/src/main/resources/template/Entity.java.vm
@@ -25,9 +25,9 @@ import java.util.Date;
 public class ${className}Entity extends BaseEntity {
 
 #foreach ($column in $columns)
-#if($column.attrname != 'createBy' && $column.attrname != 'createTime'
-	&& $column.attrname != 'updateBy' && $column.attrname != 'updateTime'
-	&& $column.attrname != 'delTime' && $column.attrname != 'delBy'
+#if($column.attrname != 'createBy' && $column.attrname != 'createAt'
+	&& $column.attrname != 'updateBy' && $column.attrname != 'updateAt'
+	&& $column.attrname != 'deleteBy' && $column.attrname != 'deleteAt'
 	&& $column.attrname != 'id' && $column.attrname != 'delFlag')
     /**
      * $column.comments
